@@ -141,7 +141,7 @@ class WMS extends LayerBase {
      * WMS numZoomLevels. Número de niveles de zoom.
      */
     if (isNullOrEmpty(this.options.numZoomLevels)) {
-      this.options.numZoomLevels = Number(IDEE.config.MAX_ZOOM); // by default
+      this.options.numZoomLevels = IDEE.config.MAX_ZOOM || 28; // by default
     }
 
     /**
@@ -805,6 +805,9 @@ class WMS extends LayerBase {
     if (!isNullOrEmpty(this.ol3Layer)) {
       olMap.removeLayer(this.ol3Layer);
       this.layers = [];
+      if (this.isWMSfull) {
+        this.getCapabilitiesPromise = null;
+      }
     }
 
     if (this.useCapabilities || this.isWMSfull) {
@@ -817,16 +820,30 @@ class WMS extends LayerBase {
   }
 
   /**
+   * Sobreescribe la URL de la capa.
+   *
+   * @function
+   * @param {String} newURL Nueva URL de la capa.
+   * @public
+   * @api
+   */
+  setURL(newURL) {
+    this.url = newURL;
+    this.recreateOlLayer();
+  }
+
+  /**
    * Sobreescribe el nombre de la capa.
    *
    * @function
-   * @param {String} newName Nuevo nombre para la capa.
+   * @param {String} newName Nuevo nombre de la capa.
    * @param {Boolean} isWMSFull Verdadero, si la capa es WMS_FULL,
    * falso si no.
    * @public
    * @api
    */
   setName(newName, isWMSFull) {
+    this.name = newName;
     this.isWMSfull = isWMSFull;
     this.recreateOlLayer();
   }
